--- a/CoreChess/Dialogs/EngineSettingsDialog.axaml
+++ b/CoreChess/Dialogs/EngineSettingsDialog.axaml
@@ -1,4 +1,4 @@
-<Window xmlns="https://github.com/avaloniaui"
+<UserControl xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,15 +6,10 @@
         xmlns:controls="clr-namespace:CoreChess.Controls"
         xmlns:i18n="clr-namespace:CoreChess.Localizer"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="CoreChess.Views.EngineSettingsWindow"
-        ShowInTaskbar="False"
-        Width="700" Height="432"
-        MinWidth="400" MinHeight="300"
-        WindowStartupLocation="CenterOwner"
-        Title="CoreChess - Engine settings">
+        x:Class="CoreChess.Dialogs.EngineSettingsWindow"
+        MaxHeight="500"
+        MinWidth="400" MinHeight="300">
 
-  <DockPanel>
-    <controls:TitleBar DockPanel.Dock="Top"/>
     <Grid Margin="15" DockPanel.Dock="Top">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -29,5 +24,4 @@
 
         <controls:OkCancelButtons Grid.Row="2" Margin="0,5,0,0" CancelVisible="False" OkClick="OnOkClick" />
     </Grid>
-  </DockPanel>
-</Window>
+</UserControl>
