--- a/CoreChess/Pages/PgnGamesPage.axaml
+++ b/CoreChess/Pages/PgnGamesPage.axaml
@@ -1,17 +1,12 @@
-﻿<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="clr-namespace:Projektanker.Icons.Avalonia;assembly=Projektanker.Icons.Avalonia"
-        xmlns:controls="clr-namespace:CoreChess.Controls"
-        xmlns:i18n="clr-namespace:CoreChess.Localizer"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="CoreChess.Views.PgnGamesWindow"
-        ShowInTaskbar="False"
-        WindowStartupLocation="CenterOwner"
-        Width="700" Height="432"
-        MinWidth="500" MinHeight="400"
-        Title="CoreChess - PGN games">
+﻿<UserControl xmlns="https://github.com/avaloniaui"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="clr-namespace:Projektanker.Icons.Avalonia;assembly=Projektanker.Icons.Avalonia"
+             xmlns:controls="clr-namespace:CoreChess.Controls"
+             xmlns:i18n="clr-namespace:CoreChess.Localizer"
+             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             x:Class="CoreChess.Pages.PgnGamesPage">
 
   <DockPanel>
     <controls:TitleBar DockPanel.Dock="Top"/>
@@ -75,4 +70,4 @@
       <controls:OkCancelButtons Grid.Row="3" OkClick="OnOkClick" CancelClick="OnCancelClick" />
     </Grid>
   </DockPanel>
-</Window>
+</UserControl>
