--- a/CoreChess/Dialogs/NewGameDialog.axaml
+++ b/CoreChess/Dialogs/NewGameDialog.axaml
@@ -7,7 +7,7 @@
              xmlns:i18n="clr-namespace:CoreChess.Localizer"
              xmlns:converters="clr-namespace:CoreChess.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="CoreChess.Dialogs.NewGameWindow">
+             x:Class="CoreChess.Dialogs.NewGameDialog">
 
   <UserControl.Resources>
     <converters:BitmapValueConverter x:Key="BitmapConverter"/>
