--- a/CoreChess/App.axaml
+++ b/CoreChess/App.axaml
@@ -2,11 +2,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CoreChess"
              x:Class="CoreChess.App"
+             RequestedThemeVariant="Dark"
              Name="CoreChess">
 
   <Application.Styles>
-    <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseDark.xaml"/>
-    <StyleInclude Source="avares://Avalonia.Themes.Fluent/FluentDark.xaml"/>
+    <FluentTheme />
     <StyleInclude Source="avares://CoreChess/Assets/Styles/PaletteDark.axaml" />
 
     <!-- Common styles -->
