--- a/CoreChess/Controls/GameAnalyzeGraph.axaml
+++ b/CoreChess/Controls/GameAnalyzeGraph.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:i="clr-namespace:Projektanker.Icons.Avalonia;assembly=Projektanker.Icons.Avalonia"
-             xmlns:i18n="clr-namespace:CoreChess.Localizer" 
+             xmlns:i18n="clr-namespace:CoreChess.Localizer"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="CoreChess.Controls.GameAnalyzeGraph">
   <Grid>
@@ -17,11 +17,11 @@
         <ProgressBar Name="m_Progress" Minimum="0" Maximum="100" Height="25" Value="0" />
         <TextBlock Name="m_ProgressMessage" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,5" />
     </Grid>
-    <Canvas Name="m_Canvas" 
+    <Canvas Name="m_Canvas"
       PointerPressed="OnMouseDown"
       PointerReleased="OnMouseUp"
-      PointerMoved="OnMouseMoved" 
-      PointerEnter="OnMouseEnter"
-      PointerLeave="OnMouseLeave" />
+      PointerMoved="OnMouseMoved"
+      PointerEntered="OnMouseEnter"
+      PointerExited="OnMouseLeave" />
   </Grid>
 </UserControl>
