--- a/CoreChess/Pages/SettingsPage.axaml
+++ b/CoreChess/Pages/SettingsPage.axaml
@@ -126,13 +126,16 @@
             </ComboBox>
 
             <TextBlock Grid.Row="2" Text="{i18n:Localize AccentColor}" VerticalAlignment="Center" />
+            <ColorPicker Grid.Column="1" Grid.Row="2" Name="m_AccentButton" HorizontalAlignment="Right" />
+
             <TextBlock Grid.Row="3" Text="{i18n:Localize HighlightColor}" VerticalAlignment="Center" />
+            <ColorPicker Grid.Column="1" Grid.Row="3" Name="m_HighlightButton" HorizontalAlignment="Right" />
 
             <TextBlock Grid.Row="4" Text="{i18n:Localize Topmost}" VerticalAlignment="Center" />
-            <ToggleSwitch Grid.Row="4" Grid.Column="1" Name="m_Topmost" HorizontalAlignment="Right" />
+            <ToggleSwitch Grid.Column="1" Grid.Row="4"  Name="m_Topmost" HorizontalAlignment="Right" />
 
             <TextBlock Grid.Row="5" Text="{i18n:Localize RestoreWindowSizeAndPosition}" VerticalAlignment="Center" />
-            <ToggleSwitch Grid.Row="5" Grid.Column="1" Name="m_RestoreWindowSizeAndPosition" HorizontalAlignment="Right" />
+            <ToggleSwitch Grid.Column="1" Grid.Row="5" Name="m_RestoreWindowSizeAndPosition" HorizontalAlignment="Right" />
           </Grid>
         </ScrollViewer>
       </TabItem>
@@ -206,9 +209,16 @@
             </ComboBox>
 
             <TextBlock Grid.Row="5" Text="{i18n:Localize WhiteFilesColor}" VerticalAlignment="Center" />
+            <ColorPicker Grid.Column="1" Grid.Row="5" Name="m_WhiteButton" />
+
             <TextBlock Grid.Row="6" Text="{i18n:Localize WhiteFilesSelectedColor}" VerticalAlignment="Center" />
+            <ColorPicker Grid.Column="1" Grid.Row="6" Name="m_WhiteSelectedButton" />
+
             <TextBlock Grid.Row="7" Text="{i18n:Localize BlackFilesColor}" VerticalAlignment="Center" />
+            <ColorPicker Grid.Column="1" Grid.Row="7" Name="m_BlackButton" />
+
             <TextBlock Grid.Row="8" Text="{i18n:Localize BlackFilesSelectedColor}" VerticalAlignment="Center" />
+            <ColorPicker Grid.Column="1" Grid.Row="8" Name="m_BlackSelectedButton" />
           </Grid>
         </ScrollViewer>
       </TabItem>
