--- a/CoreChess/Views/SplashWindow.axaml
+++ b/CoreChess/Views/SplashWindow.axaml
@@ -2,7 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="clr-namespace:Projektanker.Icons.Avalonia;assembly=Projektanker.Icons.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="CoreChess.Views.SplashWindow"
         WindowStartupLocation="CenterScreen"
@@ -15,9 +14,10 @@
         Title="">
 
   <Border CornerRadius="10" ClipToBounds="True"
-          Background="{DynamicResource SystemControlBackgroundAltHighBrush}"
+          Background="{DynamicResource SystemRegionBrush}"
           BorderBrush="{DynamicResource SystemControlBackgroundBaseHighBrush}"
           BorderThickness="0.5"
+          UseLayoutRounding="False"
           Padding="15">
     <Grid>
       <Grid.ColumnDefinitions>
