--- a/CoreChess/App.axaml
+++ b/CoreChess/App.axaml
@@ -7,6 +7,7 @@
 
   <Application.Styles>
     <FluentTheme />
+    <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
     <StyleInclude Source="avares://CoreChess/Assets/Styles/PaletteDark.axaml" />
 
     <!-- Common styles -->
