--- a/CoreChess/Pages/SettingsPage.axaml
+++ b/CoreChess/Pages/SettingsPage.axaml
@@ -63,11 +63,11 @@
 
             <TextBlock Grid.Row="5" Text="{i18n:Localize MaxEngineThinkingTime}" VerticalAlignment="Center" IsVisible="False" />
             <NumericUpDown Grid.Row="5" Grid.Column="1" Name="m_MaxEngineThinkingTimeSecs" IsVisible="False"
-                          Minimum="0"/>
+                           FormatString="0" Minimum="0"/>
 
             <TextBlock Grid.Row="6" Text="{i18n:Localize MaxEngineDepth}" VerticalAlignment="Center" IsVisible="False" />
             <NumericUpDown Grid.Row="6" Grid.Column="1" Name="m_MaxEngineDepth" IsVisible="False"
-                          Minimum="0"/>
+                           FormatString="0" Minimum="0"/>
 
             <TextBlock Grid.Row="7" Text="{i18n:Localize OpeningBook}" VerticalAlignment="Center" Margin="0,5,0,5" />
             <ComboBox Name="m_OpeningBookType" Grid.Row="7" Grid.Column="1" Margin="0,5,0,5"
