--- a/CoreChess/Pages/NewGamePage.axaml
+++ b/CoreChess/Pages/NewGamePage.axaml
@@ -21,8 +21,24 @@
 
     <ScrollViewer>
       <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <controls:PlayerControl Grid.Column="0" Name="m_Player1"
+                                Margin="0,0,5,0"
+                                ColorChanged="OnPlayer1ColorChanged"/>
+        <controls:PlayerControl Grid.Column="1" Name="m_Player2"
+                                ColorChanged="OnPlayer2ColorChanged"
+                                Margin="5,0,5,0"/>
+      </Grid>
+    </ScrollViewer>
+
+    <ScrollViewer IsVisible="False">
+      <Grid>
         <Grid.RowDefinitions>
-          <RowDefinition Height="*"/>
+          <RowDefinition Height="Auto"/>
           <RowDefinition Height="Auto"/>
           <RowDefinition Height="Auto"/>
           <RowDefinition Height="Auto"/>
