--- a/CoreChess/Pages/NewGamePage.axaml
+++ b/CoreChess/Pages/NewGamePage.axaml
@@ -4,14 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="clr-namespace:CoreChess.Controls"
              xmlns:i18n="clr-namespace:CoreChess.Localizer"
-             xmlns:converters="clr-namespace:CoreChess.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="CoreChess.Dialogs.NewGamePage">
-
-  <UserControl.Resources>
-    <converters:BitmapValueConverter x:Key="BitmapConverter"/>
-    <converters:ObjectToBoolConverter x:Key="ObjectToBoolConverter"/>
-  </UserControl.Resources>
 
   <Grid Margin="15,15,15,5">
     <Grid.RowDefinitions>
@@ -21,126 +15,64 @@
 
     <ScrollViewer>
       <Grid>
-        <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="*" />
-          <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-
-        <controls:PlayerControl Grid.Column="0" Name="m_Player1"
-                                Margin="0,0,5,0"
-                                ColorChanged="OnPlayer1ColorChanged"/>
-        <controls:PlayerControl Grid.Column="1" Name="m_Player2"
-                                ColorChanged="OnPlayer2ColorChanged"
-                                Margin="5,0,5,0"/>
-      </Grid>
-    </ScrollViewer>
-
-    <ScrollViewer IsVisible="False">
-      <Grid>
         <Grid.RowDefinitions>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="Auto" />
+          <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="*"/>
           <ColumnDefinition Width="*" />
           <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <ToggleButton Name="m_WhiteBtn" IsThreeState="False" IsChecked="True" Click="OnWhiteClick" Grid.Column="0" HorizontalAlignment="Stretch"
-                      Classes="Left">
-          <Image Name="m_White" Height="100"></Image>
-        </ToggleButton>
-        <ToggleButton Name="m_RandomBtn" IsThreeState="False" Click="OnRandomClick" Grid.Column="1" HorizontalAlignment="Stretch"
-                      Height="{Binding #m_WhiteBtn.Bounds.Height}" Width="{Binding #m_WhiteBtn.Bounds.Width}" Classes="Middle">
-          <TextBlock Text="?" FontSize="36" VerticalAlignment="Center" HorizontalAlignment="Center" />
-        </ToggleButton>
-        <ToggleButton Name="m_BlackBtn" IsThreeState="False" Click="OnBlackClick" Grid.Column="2" HorizontalAlignment="Stretch"
-                      Classes="Right">
-          <Image Name="m_Black" Height="100"></Image>
-        </ToggleButton>
+        <controls:PlayerControl Grid.Row="0" Grid.Column="0" Name="m_Player1"
+                                Margin="0,0,5,0"
+                                ColorChanged="OnPlayer1ColorChanged"
+                                SupportChess960Changed="OnPlayerSupportChess960Changed"/>
+        <controls:PlayerControl Grid.Row="0" Grid.Column="1" Name="m_Player2"
+                                ColorChanged="OnPlayer2ColorChanged"
+                                SupportChess960Changed="OnPlayerSupportChess960Changed"
+                                Margin="5,0,5,0"/>
 
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize Engine}"/>
-          <ComboBox Name="m_Engines" Margin="0,5,0,5"
-                    SelectionChanged="OnEngineChanged">
-            <ComboBox.ItemTemplate>
-              <DataTemplate>
-                <TextBlock Text="{Binding Name}" />
-              </DataTemplate>
-            </ComboBox.ItemTemplate>
-          </ComboBox>
-        </StackPanel>
+        <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+          <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+          </Grid.RowDefinitions>
+          <StackPanel Name="m_GameTypeStack" Grid.Row="0" Orientation="Vertical">
+            <TextBlock Text="{i18n:Localize GameType}"/>
+            <ComboBox Name="m_GameType" Margin="0,5,0,5">
+              <ComboBoxItem Content="{i18n:Localize Classic}" />
+              <ComboBoxItem Content="{i18n:Localize Chess960}" />
+            </ComboBox>
+          </StackPanel>
 
-        <StackPanel Name="m_EngineEloStack" Grid.Row="2" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize Elo}"/>
-          <NumericUpDown Name="m_EngineElo" FormatString="0" Margin="0,5,0,5" />
-        </StackPanel>
+          <StackPanel Grid.Row="1" Orientation="Vertical">
+            <TextBlock Text="{i18n:Localize MaximumTime}"/>
+            <NumericUpDown Name="m_MaxTime" FormatString="0" Minimum="1" Margin="0,5,0,5" />
+          </StackPanel>
 
-        <StackPanel Name="m_GameTypeStack" Grid.Row="3" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize GameType}"/>
-          <ComboBox Name="m_GameType" Margin="0,5,0,5">
-            <ComboBoxItem Content="{i18n:Localize Classic}" />
-            <ComboBoxItem Content="{i18n:Localize Chess960}" />
-          </ComboBox>
-        </StackPanel>
+          <StackPanel Grid.Row="2" Orientation="Vertical">
+            <TextBlock Text="{i18n:Localize TimeIncrement}"/>
+            <NumericUpDown Name="m_TimeIncrement" FormatString="0" Minimum="0" Margin="0,5,0,5" />
+          </StackPanel>
 
-        <StackPanel Name="m_PersonalityStack" Grid.Row="4" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize Personality}"/>
-          <ComboBox Name="m_Personality" Margin="0,5,0,5" />
-        </StackPanel>
+          <Grid Grid.Row="3" Margin="0,0,0,5">
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="*" />
+              <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="{i18n:Localize TrainingMode}" VerticalAlignment="Center" />
+            <ToggleSwitch Grid.Column="1" Name="m_TrainingMode" ToolTip.Tip="{i18n:Localize TrainingModeHelp}" />
+          </Grid>
 
-        <StackPanel Name="m_TheKingPersonalityStack" Grid.Row="4" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize Personality}"/>
-          <ComboBox Name="m_TheKingPersonality" Margin="0,5,0,5">
-            <ComboBox.ItemTemplate>
-              <DataTemplate>
-                <Grid>
-                  <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*" />
-                  </Grid.ColumnDefinitions>
-                  <Image Grid.Column="0" Height="30" Source="{Binding ImageFullPath, Converter={StaticResource BitmapConverter}}"
-                         IsVisible="{Binding ImageFullPath, Converter={StaticResource ObjectToBoolConverter}}"
-                         Margin="0,0,5,0"/>
-                  <TextBlock Grid.Column="1" Text="{Binding DisplayName}" TextTrimming="CharacterEllipsis" VerticalAlignment="Center" />
-                </Grid>
-              </DataTemplate>
-            </ComboBox.ItemTemplate>
-          </ComboBox>
-        </StackPanel>
-
-        <StackPanel Grid.Row="5" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize MaximumTime}"/>
-          <NumericUpDown Name="m_MaxTime" FormatString="0" Minimum="1" Margin="0,5,0,5" />
-        </StackPanel>
-
-        <StackPanel Grid.Row="6" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize TimeIncrement}"/>
-          <NumericUpDown Name="m_TimeIncrement" FormatString="0" Minimum="0" Margin="0,5,0,5" />
-        </StackPanel>
-
-        <Grid Grid.Row="7" Grid.ColumnSpan="3" Margin="0,0,0,5">
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="Auto" />
-          </Grid.ColumnDefinitions>
-          <TextBlock Text="{i18n:Localize TrainingMode}" VerticalAlignment="Center" />
-          <ToggleSwitch Grid.Column="1" Name="m_TrainingMode" ToolTip.Tip="{i18n:Localize TrainingModeHelp}" />
+          <StackPanel Grid.Row="4" Orientation="Vertical">
+            <TextBlock Text="{i18n:Localize InitialPositionFen}"/>
+            <TextBox Name="m_FenString" Margin="0,5,0,5" />
+          </StackPanel>
         </Grid>
-
-        <StackPanel Grid.Row="8" Grid.ColumnSpan="3" Orientation="Vertical">
-          <TextBlock Text="{i18n:Localize InitialPositionFen}"/>
-          <TextBox Name="m_FenString" Margin="0,5,0,5" />
-        </StackPanel>
-
       </Grid>
     </ScrollViewer>
 
