--- a/CoreChess/Views/MainWindow.axaml
+++ b/CoreChess/Views/MainWindow.axaml
@@ -6,6 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         Width="800" Height="494"
         MinHeight="500" MinWidth="600"
+        WindowStartupLocation="CenterScreen"
         x:Class="CoreChess.Views.MainWindow"
         Title="CoreChess">
     <DockPanel>
