--- a/CoreChess/Controls/PlayerControl.axaml
+++ b/CoreChess/Controls/PlayerControl.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:controls="clr-namespace:CoreChess.Controls"
              xmlns:converters="clr-namespace:CoreChess.Converters"
              xmlns:i18n="clr-namespace:CoreChess.Localizer"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -13,6 +14,7 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -97,5 +99,9 @@
             </ComboBox>
         </StackPanel>
 
+        <StackPanel Name="m_OpeningBookStack" Grid.Row="5" Grid.ColumnSpan="3" Orientation="Vertical">
+            <TextBlock Text="{i18n:Localize OpeningBook}"/>
+            <controls:OpeningBookComboBox Name="m_OpeningBook" Margin="0,5,0,5"/>
+        </StackPanel>
     </Grid>
 </UserControl>
