--- a/CoreChess/Pages/SettingsPage.axaml
+++ b/CoreChess/Pages/SettingsPage.axaml
@@ -33,7 +33,6 @@
               <RowDefinition Height="Auto"/>
               <RowDefinition Height="Auto"/>
               <RowDefinition Height="Auto"/>
-              <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
               <ColumnDefinition Width="Auto"/>
@@ -70,23 +69,7 @@
                            FormatString="0" Minimum="0"/>
 
             <TextBlock Grid.Row="7" Text="{i18n:Localize OpeningBook}" VerticalAlignment="Center" Margin="0,5,0,5" />
-            <ComboBox Name="m_OpeningBookType" Grid.Row="7" Grid.Column="1" Margin="0,5,0,5"
-                      SelectionChanged="OnOpeningBookTypeChanged">
-              <ComboBoxItem Content="{i18n:Localize None}" />
-              <ComboBoxItem Content="{i18n:Localize Internal}" />
-              <ComboBoxItem Content="{i18n:Localize Custom}" />
-            </ComboBox>
-
-            <Grid Name="m_OpeningBookCustom" Grid.Row="8" Grid.Column="1" >
-              <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-              </Grid.ColumnDefinitions>
-              <TextBox Name="m_OpeningBook" Margin="0,0,0,0" VerticalAlignment="Center" />
-              <Button Grid.Column="1" Margin="0" Padding="12" Click="OnOpeningBookClick">
-                <i:Icon Value="fas fa-folder-open" />
-              </Button>
-            </Grid>
+            <controls:OpeningBookComboBox Grid.Row="7" Grid.Column="1" Margin="0,5,0,5" Name="m_OpeningBook" />
           </Grid>
         </ScrollViewer>
       </TabItem>
